--- a/src/app/features/gis/components/policy/components/policy-summary-details/policy-summary-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-details/policy-summary-details.component.html
@@ -8,7 +8,7 @@
             <i class="fa-solid fa-pencil"></i>
             </button>
             <button class="btn btn-primary me-4">Reassign</button>
-            <button class="btn btn-primary me-4">Generate cover note</button>
+            <button class="btn btn-primary me-4" (click)="generateCoverNote()">Generate cover note</button>
             <button class="btn btn-primary" (click)="computePremium()">Compute Premium</button>
         </div>
     </div>
