--- a/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.css
+++ b/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.css
@@ -1,16 +1,113 @@
 .main {
-    background: #F5F6F8;
+  background: #F5F6F8;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.container {
+  background: #FFF;
+  border: 1px solid rgba(220, 220, 220, 0.85);
+  border-radius: 5px;
+  flex: 1;
+  padding: 48px;
+}
+
+.title {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.button-container {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+button {
+  padding: 8px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  font-size: 14px;
+  transition: background-color 0.3s, color 0.3s, border 0.3s;
+}
+
+button.admit-claim {
+  background-color: #00529B;
+  color: #FFFFFF;
+  border-color: #00529B;
+}
+
+button.admit-claim:hover {
+  background-color: #65b2f5;
+}
+
+.pdf-icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.doc-container {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  /* grid-template-columns: repeat(3, minmax(100px, 1fr)); */
+}
+
+.document {
+  margin-bottom: 20px;
+}
+
+.document-row {
+  display: flex;
+  align-items: center;
+}
+
+.icon-container {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  padding-left: 10px;
+  margin-right: 300px;
+}
+
+.pi {
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.item-label,
+.pi {
+  color: #000;
+}
+
+li:hover .item-label {
+  color: blue;
+  text-decoration: underline;
+}
+
+@media (max-width: 1200px) {
+  .main {
+    width: 100%;
+    overflow: auto;
+    align-items: center;
+  }
+
+  .container {
+    flex-direction: column;
+    width: 100%;
+    overflow: auto;
+  }
+
+  .doc-container {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    justify-content: space-between;
-    padding: 20px;
+    gap: 20px;
+    padding: 10px;
   }
-  
-  .container {
-    background: #FFF;
-    border: 1px solid rgba(220, 220, 220, 0.85);
-    border-radius: 5px;
-    flex: 1;
-    padding: 48px;
-  }
+}
