--- a/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.html
+++ b/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.html
@@ -1,8 +1,80 @@
 <div class="main">
-    <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
+    </div>
+  </div>
+  <div class="container">
+    <div><span class="title">Claim information</span></div>
+    <div class="row col-12" style="color: black;">
+      <div class="col-md-4 col-xs-12 col-sm-12">
+        <table style="width: 100%;">
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Product: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Causation type: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Incident location: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-md-4 col-xs-12 col-sm-12">
+        <table style="width: 100%;">
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Policy: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Causation cause: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Claim report date: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+        </table>
+      </div>
+      <div class="col-md-4 col-xs-12 col-sm-12">
+        <table style="width: 100%;">
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Policy member: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+          <tr>
+            <td style="width: 50%; align-items: left; color: grey;">Death date: </td>
+            <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div class="mt-3"><span class="title">Documents</span></div>
+
+    <div class="doc-container">
+      <div class="document" *ngFor="let doc of documents; let i = index">
+        <div style="color: black;">{{ doc.label }}</div>
+        <div class="document-row">
+          <img src="assets/images/file-type-pdf.svg" class="pdf-icon">{{ doc.name }}
+          <span class="icon-container">
+            <a href="{{ doc.path }}" target="_blank" title="View">
+              <i class="pi pi-eye" aria-hidden="true"></i>
+            </a>
+
+            <a href="{{ doc.path }}" download title="Download">
+              <i class="pi pi-download" aria-hidden="true"></i>
+            </a>
+          </span>
         </div>
       </div>
-    <div class="container"></div>
+    </div>
+
+  </div>
+  <div class="button-container">
+    <button class="admit-claim">Admit claim</button>
+  </div>
 </div>
