--- a/src/app/features/crm/components/system-roles/system-roles.component.css
+++ b/src/app/features/crm/components/system-roles/system-roles.component.css
@@ -30,3 +30,11 @@
 :host ::ng-deep .p-tabview {
   /*height: 200px*/
 }
+
+#processAreaAccordion .accordion-item {
+  border: none;
+}
+
+#processAreaAccordion .accordion-header {
+  font-size: 1rem;
+}
