--- a/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.css
+++ b/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.css
@@ -70,15 +70,31 @@ button.admit-claim:hover {
 .icon-container {
   display: flex;
   align-items: center;
-  margin-left: auto;
+  margin-left: 20px;
   padding-left: 10px;
-  margin-right: 300px;
+  /* margin-right: 300px; */
 }
 
-.pi {
+.document-row .pi {
   font-size: 18px;
   cursor: pointer;
-  margin-right: 30px;
+  margin-right: 15px;
+  display: none;
+}
+
+.document-row:hover .pi {
+  display: inline-block;
+}
+
+.download-link .pi {
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 15px;
+  display: none;
+}
+
+.download-link:hover .pi {
+  display: inline-block;
 }
 
 .item-label,
@@ -90,6 +106,131 @@ li:hover .item-label {
   color: blue;
   text-decoration: underline;
 }
+
+/* Styles for the link */
+.download-link {
+  text-decoration: underline;
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.download-link:hover {
+  color: #00529B;
+  text-decoration: underline;
+}
+
+.share-button-container {
+  padding-left: 40px;
+}
+
+.bottom-button-share {
+  display: inline-flex;
+  height: 40px;
+  padding: 12px 16px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #00529B;
+  float: right;
+  color: #00529B;
+}
+
+.btn.btn-primary.bottom-button-share {
+  color: #00529B !important;
+  background-color: white !important;
+  border: 1px solid #00529B !important;
+  outline: none !important;
+}
+
+.btn.btn-primary.bottom-button-share:hover {
+  color: #00529B !important;
+  background-color: rgb(243, 237, 237) !important;
+  border: 1px solid #00529B !important;
+}
+
+.text-share {
+  color: #00529B;
+  leading-trim: both;
+  text-edge: cap;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.custom-red-button {
+  color: transparent;
+  background-color: transparent;
+  border: none;
+}
+
+.custom-red-button::before {
+  content: "X";
+  color: #EE3945;
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+
+}
+
+.modal-header,
+ .modal-footer {
+     border: none;
+     /* Removes the border between header/footer and body of modal */
+ }
+
+ .modal-content {
+  padding: 0 20px;
+ }
+
+ .black-text-form {
+  color: #000;
+}
+
+.custom-radio-button-container {
+  display: flex;
+  align-items: center;
+}
+
+.custom-radio-button {
+  border-color: #000;
+  outline-color: #000;
+}
+
+:host ::ng-deep {
+  .custom-radio-button .ui-radiobutton-box.ui-widget {
+      background-color: black !important;
+      border-color: black !important;
+  }
+
+}
+
+:host ::ng-deep {
+  .custom-radio-button .ui-radiobutton-icon {
+      background-color: black !important;
+  }
+
+}
+
+:host ::ng-deep {
+  .custom-radio-button .ui-radiobutton-label {
+      color: black !important;
+  }
+
+}
+
+.custom-label {
+  margin-left: 8px;
+}
+
+td {
+  padding: 2px;
+  white-space: nowrap;
+}
+
 
 @media (max-width: 1200px) {
   .main {
@@ -109,5 +250,9 @@ li:hover .item-label {
     flex-direction: column;
     gap: 20px;
     padding: 10px;
+  }
+
+  .download-link .pi, .document-row .pi {
+    display: inline-block;
   }
 }
