--- a/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.html
+++ b/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.html
@@ -74,7 +74,165 @@
     </div>
 
   </div>
-  <div class="button-container">
-    <button class="admit-claim">Admit claim</button>
+  <div class="button-container" *ngIf="!isClaimAdmitted">
+    <button class="admit-claim" (click)="onAdmitClaim()">Admit claim</button>
   </div>
+
+  <ng-container *ngIf="isClaimAdmitted">
+    <div class="container" style="margin-top: 10px;">
+      <div><span class="title">Acknowledgement letter</span></div>
+
+      <div class="download-link" style="display: flex; align-items: center; white-space: nowrap;">
+        <a href="#">
+          <img src="assets/images/file-type-pdf.svg" class="pdf-icon" style="vertical-align: middle;">
+          <span class="download-link" style="vertical-align: middle;">
+            {{ 'Claim acknowledgement letter' }}
+          </span>
+        </a>
+      
+        <span style="margin-left: 20px; vertical-align: middle;">
+          <i class="pi pi-eye" aria-hidden="true" title="view"></i>
+        </span>
+        <span style="margin-left: 10px; vertical-align: middle;">
+          <i class="pi pi-download" aria-hidden="true" title="Download"></i>
+        </span>
+      
+        <span class="share-button-container">
+          <button class="bottom-button-share" (click)="showShareAcknowledgmentModal()">
+            <span class="text-share">Share</span>
+          </button>
+        </span>
+      </div>
+      
+    </div>
+  
+    <div class="button-container">
+      <button class="admit-claim" (click)="onProcessClaim()">Process claim</button>
+    </div>
+  </ng-container>
 </div>
+
+<!-- modals begin -->
+ <!-- Share acknowledgement -->
+ <div class="modal fade" tabindex="-1" #memberSummaryModal id="shareAcknowledgementModal"
+ aria-labelledby="shareAcknowledgementModal" aria-hidden="true">
+ <div class="modal-dialog modal-dialog-centered modal-lg">
+     <div class="modal-content">
+         <div class="modal-header">
+          <h5 class="modal-title" id="shareAcknowledgementModal">Acknowledgement details</h5>
+             <button type="button" class="custom-red-button ms-auto" data-bs-dismiss="modal"
+                 aria-label="Close" (click)="closeShareAcknowledgmentModal()"></button>
+         </div>
+         <div class="modal-body">
+             <!-- <div class="card"> -->
+              <div class="row col-12" style="color: black;">
+                <div class="col-md-6 col-xs-12 col-sm-12 col-xs-12">
+                  <table style="width: 100%;">
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Product: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Policy: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Policy member: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Causation type: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                  </table>
+                </div>
+                <div class="col-md-6 col-xs-12 col-sm-12 col-xs-12">
+                  <table style="width: 100%;">
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Actual cause: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Claim initialization date: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                    <tr>
+                      <td style="width: 50%; align-items: left; color: grey;">Incident occurence date: </td>
+                      <td style="width: 50%; align-items: right;">{{ claimDetails }}</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <div class="black-text-form title mt-3">Share acknowledgement letter</div>
+             <form [formGroup]="shareAcknowledgementForm" class="black-text-form">
+              <div class="black-text-form mt-2">Select sharing method</div>
+                 <div class="row col-lg-7 col-m-7 col-sm-12 col-xs-12">
+                     <div class="col">
+                         <div class="custom-radio-button-container">
+                             <p-radioButton formControlName="communicationType" value="email" inputId="email"
+                                 class="custom-radio-button"></p-radioButton>
+                                 <!-- <input class="form-check-input" type="radio" value="email" formControlName="communicationType"
+                              id="email" name="communicationType" /> -->
+                             <label for="email" class="custom-label">Email</label>
+                         </div>
+                     </div>
+
+                     <div class="col">
+                         <div class="">
+                             <p-radioButton formControlName="communicationType" value="sms"
+                                 inputId="sms"></p-radioButton>
+                             <label for="sms" class="custom-label">SMS</label>
+                         </div>
+                     </div>
+
+                     <div class="col">
+                         <div class="">
+                             <p-radioButton formControlName="communicationType" value="whatsapp"
+                                 inputId="whatsapp"></p-radioButton>
+                             <label for="whatsapp" class="custom-label">Whatsapp</label>
+                         </div>
+                     </div>
+                 </div>
+
+                 <div *ngIf="shareAcknowledgementForm.get('communicationType').value === 'email'">
+                     <div>
+                         <label class="label" for="email">Enter email address<span
+                                 class="required"></span></label>
+                     </div>
+                     <div class="form-group col-lg-6 col-m-6 col-sm-12 col-xs-12">
+                         <input type="email" pInputText class="form-control" formControlName="email" />
+                     </div>
+                 </div>
+
+                 <div *ngIf="shareAcknowledgementForm.get('communicationType').value === 'sms'">
+                     <div>
+                         <label class="label" for="sms">Enter phone number<span
+                                 class="required"></span></label>
+                     </div>
+                     <div class="form-group col-lg-6 col-m-6 col-sm-12 col-xs-12">
+                         <input type="text" pInputText class="form-control" formControlName="sms" />
+                     </div>
+                 </div>
+
+                 <div *ngIf="shareAcknowledgementForm.get('communicationType').value === 'whatsapp'">
+                     <div>
+                         <label class="label" for="whatsapp">Enter whatsapp number<span
+                                 class="required"></span></label>
+                     </div>
+                     <div class="form-group col-lg-6 col-m-6 col-sm-12 col-xs-12">
+                         <input type="text" pInputText class="form-control" formControlName="whatsapp" />
+                     </div>
+                 </div>
+
+             </form>
+
+             <!-- </div> -->
+         </div>
+         <div class="modal-footer">
+             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Share</button>
+         </div>
+     </div>
+ </div>
+</div>
+<!-- Share acknowledgement end -->
+ <!-- modals end -->
