--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.css
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.css
@@ -71,3 +71,39 @@
   input[type="file"] {
     display: none;
   }
+  ::ng-deep .p-dropdown{
+    /* height: 53%; */
+    width: 100%;
+    border: 1px solid rgba(0, 0, 0, 0.20);
+    border-radius: 4px;
+    }
+    ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
+    padding:3px;
+    }
+
+    ::ng-deep
+    .p-dropdown .p-dropdown-label {
+        padding: 3px;
+        font-size: 14px;
+        color: #000;
+    }
+
+    ::ng-deep
+    .p-dropdown-filter {
+        width: 100%;
+        height: 30px;
+        border-radius: 4px;
+    }
+    ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+      font-size: 14px;
+      color: #000;
+      padding:3px 20px;
+      font-family: Roboto;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+    ::ng-deep  ul {
+         padding-left: 0rem;
+    }
